--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "del ./build/*",
     "build": "npm run clean && tsc",
-    "publish": "npm publish"
+    "publish": "npm version patch && npm publish"
   },
   "keywords": [],
   "author": "",
