--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@simtix/ticketing-common": "^1.0.31",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
